--- a/main.css
+++ b/main.css
@@ -30,3 +30,14 @@ body{
     justify-content: center;
     gap: 1%;
 }
+
+#roster{
+    display:flex;
+    justify-content: center;
+}
+
+div[id^="pokemon-"]{
+    width:100px;
+    height: 100px;
+    border: 1px solid #ccc;
+}
