--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body{
     border-radius: 10px;
     background-color: #fff;
     transition: transform 0.5s;
+    position: relative;
 }
 
 .pokemon-card > img{
@@ -23,6 +24,11 @@ body{
     transform: scale(1.01);
     border: 5px solid dodgerblue;
     cursor: pointer;
+}
+
+.pokemon-card-flash{
+    animation: flash 0.5s;
+    animation: shake 0.5s;
 }
 
 #container{
@@ -45,4 +51,55 @@ div[id^="pokemon-"]{
 .roster-img{
     height: 100px;
     width: 100px;
+}
+
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+        background-color: white;
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+        background-color: red;
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+        background-color: white;
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+        background-color: red;
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+        background-color: white;
+    }
 }
